27.08.2021
==========
hcxhashtool: VENDOR search is not longer case sensitive


25.08.2021
==========
hcxpcapngtool: advanced handling of BEACON and PROBERESPOSNE frames
               distinguish between SSID set, SSID unset and SSID zeroed


20.06.2021
==========
Makefile: added compiler flag to disable zlib support


04.06.2021
==========
hcxpcapngtool: improved CSV output:
--csv=<file>                       : output ACCESS POINT information in CSV format
                                     delimiter: tabulator (0x08)
                                     columns:
                                     YYYY-MM-DD HH:MM:SS MAC_AP ESSID ENC_TYPE CIPHER AKM COUNTRY_INFO CHANNEL RSSI GPS(DM.m) GPS(D.d) GPSFIX
                                     to convert it to other formats, use bash tools or scripting languages
                                     GPS FIX:
                                     0 = fix not available or invalid
                                     1 = fix valid (GPS SPS mode)
                                     2 = fix valid (differential GPS SPS Mode)
                                     3 = not supported
                                     4 = not supported
                                     5 = not supported
                                     6 = fix valid (Dead Reckoning Mode)


28.05.2021
==========
hcxpsktool: added new option to use an exclude ESSID combinations
--noessidcombination: exclude ESSID combinations


17.05.2021
==========
release v 6.2.0
get ready for gcc 11.1.0


12.05.2021
==========
hcxpsktool: added new option to print only candidates based on ACCESS POINT MAC
--maconly     : print only candidates based on ACCESS POINT MAC


17.03.2021
==========
hcxhashtool: added new option to use an exclude MAC filter list
--mac-skiplist=<file>        : exclude MAC from file
                               format: 001122334455, 00:11:22:33:44:55, 00-11-22-33-44-55 (hex)


09.03.2021
==========
release v 6.1.5
get ready for OpenSSL 3.0

